package Models;

public class Test {

    private String type;
    private int duration;
    private float calification;

    public Test(String type, int duration){

        this.type = type;
        this.duration = duration;
    }

    public void addQuestion(){};
    public void getQuestion(){};


    
}
