@startuml DiagramaDePaquetes

skinparam PackageBackgroundColor white
skinparam ClassBackgroundColor white
skinparam classAttributeIconSize 0
hide circle

package "student"{

    class solutionsView{}
    class testView{}
    class StudentView{}
    class answerTest{}    
    StudentView --> testView
    
}

package "testPackage"{

    class createTestView{}
    class createTest{}
    class "Test"{}
    class "Question"{}

    Test *-- Question
}

package "certificates"{
    class "Certificate"{}
    class getCertificate{}
    class getCertificateView{}
}

    getCertificateView -d-> getCertificate
    getCertificate --> Certificate
    createTestView -d-> createTest
    createTest --> Test
    testView -d-> answerTest
    answerTest -r-> solutionsView
    answerTest --> Test

    Certificate .l.> Test
@enduml